k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chat-app
  labels:
    app: chatapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: abdullahbinamin.qzz.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 5001
      - pathType: Prefix
        path: /socket.io
        backend:
          service:
            name: backend
            port:
              number: 5001
